# aoc-2025

./: Cargo.toml
src/: day01_1.rs  day01_2.rs  day02_1.rs  day02_2.rs  day03_1.rs  day03_2.rs
